<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_modify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/activity_modify_toolbar" />

    <Button
        android:id="@+id/test_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="test" />


    <TextView
        android:id="@+id/tv_group_label"
        style="@style/AppEditText.S20"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:text="@string/fragment_home_tv_group_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_modify" />


    <TextView
        android:id="@+id/tv_group_count"
        style="@style/AppEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:text="0 명"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner_modify"
        app:layout_constraintTop_toBottomOf="@id/toolbar_modify" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinner_modify"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/et_input"
        app:layout_constraintEnd_toStartOf="@id/tv_group_count"
        app:layout_constraintStart_toEndOf="@id/tv_group_label"
        app:layout_constraintTop_toBottomOf="@id/toolbar_modify" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_box"
        android:gravity="center"
        android:hint="@string/activity_add_et_player_hint_label"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/activity_modify_btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_modify"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/activity_modify_btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:text="@string/activity_add_btn_add_label"
        app:layout_constraintBottom_toBottomOf="@id/et_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_input"
        app:layout_constraintTop_toTopOf="@id/et_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_modify"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input"
        tools:listitem="@layout/rv_tv_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>